--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 <body>
   
   <div class="topnav">
-  <a class="active" href="http://InQF0fYoML8guXi:SyOqkgO5hp9ZUqh@localhost:
-    8087/storage/emulated/0/HTML,CSS%20AND%20JS/1.html">Home</a>
+  <a class="active" href="https://harshadbankar1596.github.io/Prime-anime/#about">Home</a>
  
   <a class="active2" href="#about">About</a>
     
