--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="topnav">
   <a class="active" href="https://harshadbankar1596.github.io/Prime-anime/#about">Home</a>
  
-  <a class="active2" href="#about">About</a>
+  <a class="active2" href="http://IhaVtLEqOeSpgrY:DB6UyhiSbya8hBa@localhost:53985/storage/emulated/0/10/abaut.html">About</a>
     
 <form action="/action_page.php" method="">
    <input id="search" type="text" placeholder="Search..">
