--- a/abaut.html
+++ b/abaut.html
@@ -11,7 +11,7 @@
   <a class="active" href="http://InQF0fYoML8guXi:SyOqkgO5hp9ZUqh@localhost:
     8087/storage/emulated/0/HTML,CSS%20AND%20JS/1.html">Home</a>
  
-  <a class="active2" href="#about">About</a>
+  <a class="active2" href="http://HIkuhVsPMtDqwdx:GpvUZ4RehKJRhGu@localhost:48941/storage/emulated/0/10/abaut.html">About</a>
     
 <form action="/action_page.php" method="">
    <input id="search" type="text" placeholder="Search..">
