--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 <body>
   
   <div class="topnav">
-  <a class="active" href="https://harshadbankar1596.github.io/Prime-anime/#about">Home</a>
+  <a class="active" href="http://InQF0fYoML8guXi:SyOqkgO5hp9ZUqh@localhost:
+    8087/storage/emulated/0/HTML,CSS%20AND%20JS/1.html">Home</a>
  
-  <a class="active2" href="http://HIkuhVsPMtDqwdx:GpvUZ4RehKJRhGu@localhost:48941/storage/emulated/0/10/abaut.html">About</a>
+  <a class="active2" href="#about">About</a>
     
 <form action="/action_page.php" method="">
    <input id="search" type="text" placeholder="Search..">
@@ -72,74 +73,41 @@
 					<img src="hunter.jpg"></a>
 		  <a href="https://t.me/Death_Note_al">
 				<img src="note.jpg"></a>
-		</div>
-			<hr style="padding:0;">
-  
-			<hr>
-				<div  id="d2"class="scroll-container">
-		  <a href="https://t.me/Dragon_Ball_Super_in_Hindi_New">
-				<img src="super.jpg"></a>
-		  <a href="https://t.me/Jujutsu_Kaisen_All_Hindi_Episode">
-					<img src="jjk.jpeg"></a>
-		  <a href="https://t.me/One_Punch_Man_Hindi_x">
-				<img src="one.jpg"></a>
-		  <a href="https://t.me/Naruto_Hindi_Anime">
-					<img src="naruto.jpeg"></a>
-		  <a href="https://t.me/Solo_Leveling_in_Hindi_Audio">
-				<img src="solo.jpg"></a>
-		  <a   href="https://t.me/Shinchanhindi">
-					<img src="shinchan.jpg"></a>
-		  <a href="https://t.me/Attack_on_titan_Anime_AL">
-				<img src="attack.jpg"></a>
-		  <a href="https://t.me/Pokemon_in_hindii">
-					<img src="pokemon.jpg"></a>
-		  <a href="https://t.me/Demon_Slayer_Hindi_Anime">
-					<img src="demon.jpg"></a>
-		  <a href="https://t.me/Ninja_Hattori_All_Episodes">
-					<img src="ninja.jpg"></a>
-		  <a href="https://t.me/Beyblade_Hindi">
-				<img src="byebled.jpg"></a>
-		  <a href="https://t.me/Doraemon_in_hindi_dubbed">
-					<img src="doremon.jpg"></a>
-		  <a href="https://t.me/one_piece_episode_4k">
-				<img src="onepice.jpg"></a>
-		  <a href="https://t.me/Hunter_x_Hunter_Hindi_Urdu">
-					<img src="hunter.jpg"></a>
-		  <a href="https://t.me/Death_Note_al">
-				<img src="note.jpg"></a>
-		</div>
-			<hr>
-				<div  id="d2"class="scroll-container">
-		  <a href="https://t.me/Dragon_Ball_Super_in_Hindi_New">
-				<img src="super.jpg"></a>
-		  <a href="https://t.me/Jujutsu_Kaisen_All_Hindi_Episode">
-					<img src="jjk.jpeg"></a>
-		  <a href="https://t.me/One_Punch_Man_Hindi_x">
-				<img src="one.jpg"></a>
-		  <a href="https://t.me/Naruto_Hindi_Anime">
-					<img src="naruto.jpeg"></a>
-		  <a href="https://t.me/Solo_Leveling_in_Hindi_Audio">
-				<img src="solo.jpg"></a>
-		  <a   href="https://t.me/Shinchanhindi">
-					<img src="shinchan.jpg"></a>
-		  <a href="https://t.me/Attack_on_titan_Anime_AL">
-				<img src="attack.jpg"></a>
-		  <a href="https://t.me/Pokemon_in_hindii">
-					<img src="pokemon.jpg"></a>
-		  <a href="https://t.me/Demon_Slayer_Hindi_Anime">
-					<img src="demon.jpg"></a>
-		  <a href="https://t.me/Ninja_Hattori_All_Episodes">
-					<img src="ninja.jpg"></a>
-		  <a href="https://t.me/Beyblade_Hindi">
-				<img src="byebled.jpg"></a>
-		  <a href="https://t.me/Doraemon_in_hindi_dubbed">
-					<img src="doremon.jpg"></a>
-		  <a href="https://t.me/one_piece_episode_4k">
-				<img src="onepice.jpg"></a>
-		  <a href="https://t.me/Hunter_x_Hunter_Hindi_Urdu">
-					<img src="hunter.jpg"></a>
-		  <a href="https://t.me/Death_Note_al">
-				<img src="note.jpg"></a>
+		 <a href="https://t.me/Chainsaw_Man_Hindi_Dubbed_X">
+				<img src="chainsawman.jpg"></a>
+		  <a href="https://t.me/The_Great_Cleric_Hindi_Dual">
+				<img src="thegreatcelric.jpg"></a>
+		  <a href="https://t.me/Supa_Strikas_Hindi_Dubbed">
+					<img src="superstrikas.jpg"></a>
+		  <a href="https://t.me/Baki_Hanma_Hindi_Netflix">
+				<img src="baki.jpg"></a>
+		  <a href="https://t.me/Spy_x_Family_Hindi_Anime">
+					<img src="spyxfamily.jpg"></a>
+		  <a href="https://t.me/Hindi_Gods_Games_We_Play">
+				<img src="godsgameweplay.jpg"></a>
+		  <a   href="https://t.me/The_Immortal_King_Hindi_Anime">
+					<img src="theimmortalking.jpg"></a>
+		  <a href="https://t.me/The_Strongest_Tank_in_Hindi_dub">
+				<img src="thestrongesttank.jpg"></a>
+		  <a href="https://t.me/Wrong_Way_Healing_Magic_Hindi">
+					<img src="wrongwayhealingmagic.jpg"></a>
+		  <a href="https://t.me/BUCCHIGIRI_Hindi_Anime">
+					<img src="bucchigiri.jpg"></a>
+		  <a href="https://t.me/x_Mashle_Magic_And_Muscles_Hindi">
+					<img src="mashelmagicandmuscles.jpg"></a>
+		  <a href="https://t.me/Tower_of_God_Hindi_x">
+				<img src="towerofgod.jpg"></a>
+		  <a href="https://t.me/Metallic_Rouge_Hindi_Anime_Dub">
+					<img src="metallicrouge.jpg"></a>
+		  <a href="https://t.me/Villainess_Level_99_Hindi_Anime">
+				<img src="villainesslevel99.jpg"></a>
+		  <a href="https://t.me/Log_Horizon_Hindi_Anime">
+					<img src="loghorizon.jpg"></a>
+		  <a href="https://t.me/Hokkaido_Gals_Hindi">
+				<img src="hokkaidogals.jpg"></a>
+				  <a href="https://t.me/The_Weakest_Tamer_Began_Hindi_x">
+				<img src="theweakesttamerbegan.jpg"></a>
+	
 		</div>
   <hr>
   <div id="dhi"> <h3 id="hi">Highlights</h3></div>
